--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <title>Ibad Baig</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      Hello
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
