--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <title>Ibad Baig</title>
   </head>
   <body>
-    <div id="root">
-      Hello
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
